--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,11 +1,12 @@
 .header-container {
-  width: 80%;
+  width: 100%;
   height: 50px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  box-shadow: 0px 0px 3px #717070;
 }
 
 .hambarger-search-contianer {
